# arch-config

./: .gitignore  CLAUDE.md  LICENSE  README.adoc  README.asciidoc  README.md  REQUIREMENTS.md  keybidings-neovim.asciidoc  keybindings-neovim.asciidoc  keybindings-qtile.asciidoc  keybindings-tmux.asciidoc
arch_install_scripts/: 1_pre_install.sh  3_post_installation.sh  4b_fish.fish  main.py  pyproject.toml
arch_install_scripts/arch_configurator/: __init__.py  command.py  files.py  network.py  pacman.py  result.py  steps.py  systemd.py  tui.py
arch_install_scripts/arch_configurator/tests/: __init__.py  test_command.py  test_files.py  test_network.py  test_pacman.py  test_systemd.py
arch_install_scripts/legacy_scripts/: 2_bootloader_installation.sh  4a_zsh.sh  5_desktop environment.sh
dotfiles/: .chezmoi.toml.tmpl  .chezmoiignore  .zshenv  .zshrc  20-nvidia.conf  README.asciidoc  config.fish  kitty.conf  locale.conf  resolvconf.conf  settings.json
dotfiles/.chezmoiscripts/: run_onchange_install-system-files.sh.tmpl
dotfiles/dot_config/: starship.toml
dotfiles/dot_config/btop/: btop.conf
dotfiles/dot_config/fish/: fish_plugins
dotfiles/gpg-ssh/: .pam_environment  gpg-agent.conf
dotfiles/hooks/: mirrorupgrade.hook
dotfiles/zsh/: .zshenv  .zshrc
etc/: locale.conf
home/jubi/: .Xresources  .p10k.zsh  .zshenv  .zshrc
hyperland_config/etc/: resolvconf.conf
nerd-fonts-1.2/: PKGBUILD
scripts/: README.md  contrast.py  install-ubuntu.17.10.sh  install.sh
ttf-ms-win10/: PKGBUILD
vscode-task-templates/: launch.json  settings.json  tasks.json
(+132 files in other folders)
