[project]
name = "arch-install-scripts"
version = "0.1.0"
description = "Automated Arch Linux installation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
