[project]
name = "arch-install-scripts"
version = "0.1.0"
description = "Automated Arch Linux installation system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.0.0",
]

[project.scripts]
arch-install = "main:main"

[tool.setuptools.packages.find]
include = ["arch_configurator*"]

[tool.setuptools]
py-modules = ["main"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ty>=0.0.19",
]
